Added build CLI command